--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <td width=214 style='width:160.5pt;padding:0in 0in 0in 0in'>
   <p >Ratul Mahajan<br>
   &lt;ratul [at] microsoft [dot] com&gt;<br>
-  (425) 707 0706</p>
+  </p>
   </td>
  </tr>
 </table>
@@ -58,6 +58,8 @@
 Monia Ghobadi, Ratul Mahajan
 <br>
 <i>IMC, 2016</i>
+<br>
+<b>Best Dataset Award</b>
 
 <li>
 <a href=papers/osdi2016-era.pdf>Efficient Network Reachability Analysis using a Succinct Control Plane Representation</a>
@@ -73,6 +75,8 @@ Nikolaj Bjørner, Garvit Juniwal, Ratul Mahajan, Sanjit A. Seshia, and
 George Varghese
 <br>
 <i>Haifa Verification Conference (HVC), 2016</i>
+<br>
+<b>Best Paper Award</b>
 
 <li>
 <a href=papers/sigcomm2016-propane.pdf>Don’t Mind the Gap: Bridging Network-wide Objectives and Device-level Configurations</a>
@@ -80,6 +84,8 @@ George Varghese
 Ryan Beckett, Ratul Mahajan, ,Jitu Padhye, Todd Millstein, David Walker
 <br>
 <i>SIGCOMM, 2016</i>
+<br>
+<b>Best Paper Award</b>
 
 <li>
 <a href="papers/sigcomm2016-projector.pdf">ProjecToR: Agile Reconfigurable Datacenter Interconnect</a>
