--- a/pubs.html
+++ b/pubs.html
@@ -13,7 +13,7 @@
 <a href=papers/imc2016-opticalfailures.pdf><b>Optical Layer Failures in a Large Backbone</b></a><br>
 Monia Ghobadi, Ratul Mahajan<br>
 IMC, 2016<br>
-<br>
+<b>Best Dataset Award</b><br><br>
 <tr><td><td>
 <a href=papers/osdi2016-era.pdf><b>Efficient Network Reachability Analysis using a Succinct Control Plane Representation</b></a><br>
 Seyed K. Fayaz, Tushar Sharma, Ari Fogel, Ratul Mahajan, Todd Millstein, Vyas Sekar, George Varghese<br>
@@ -23,7 +23,7 @@ OSDI, 2016<br>
 <a href=papers/hvc2016-ddnf.pdf><b>ddNF: An Efficient Data Structure for Header Spaces</b></a><br>
 Nikolaj Bjørner, Garvit Juniwal, Ratul Mahajan, Sanjit A. Seshia, George Varghese<br>
 Haifa Verification Conference (HVC), 2016<br>
-<br>
+<b>Best Paper Award</b><br><br>
 <tr><td><td>
 <a href=papers/sigcomm2016-propane.pdf><b>Don't Mind the Gap: Bridging Network-wide Objectives and Device-level Configurations</b></a><br>
 Ryan Beckett, Ratul Mahajan, Jitu Padhye, Todd Millstein, David Walker<br>
