--- a/pubs-bytopic.html
+++ b/pubs-bytopic.html
@@ -34,7 +34,7 @@ OSDI, 2016<br>
 <a href=papers/hvc2016-ddnf.pdf><b>ddNF: An Efficient Data Structure for Header Spaces</b></a><br>
 Nikolaj Bjørner, Garvit Juniwal, Ratul Mahajan, Sanjit A. Seshia, George Varghese<br>
 Haifa Verification Conference (HVC), 2016<br>
-<br>
+<b>Best Paper Award</b><br><br>
 <tr><td><td>
 <a href=papers/sigcomm2016-propane.pdf><b>Don't Mind the Gap: Bridging Network-wide Objectives and Device-level Configurations</b></a><br>
 Ryan Beckett, Ratul Mahajan, Jitu Padhye, Todd Millstein, David Walker<br>
@@ -81,7 +81,7 @@ HotNets, 2008<br>
 <a href=papers/imc2016-opticalfailures.pdf><b>Optical Layer Failures in a Large Backbone</b></a><br>
 Monia Ghobadi, Ratul Mahajan<br>
 IMC, 2016<br>
-<br>
+<b>Best Dataset Award</b><br><br>
 <tr><td><td>
 <a href=papers/sigcomm2016-projector.pdf><b>ProjecToR: Agile Reconfigurable Datacenter Interconnect</b></a><br>
 Monia Ghobadi, Ratul Mahajan, Amar Phanishayee, Houman Rastegarfar, Pierre-Alexandre Blanche, Madeleine Glick, Daniel Kilper, Janardhan Kulkarni, Gireeja Ranade, Nikhil Devanur<br>
