made pubs page relative

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 <li> <a href=https://www.microsoft.com/en-us/research/project/optical-networking/>Optical networking</a>
 </ul>
 
-<p><b>Recent papers</b> [<a href="http://research.microsoft.com/~ratul/pubs.html">Complete list</a> 
-| <a href="http://research.microsoft.com/~ratul/pubs-bytopic.html">Organized by topic</a>
+<p><b>Recent papers</b> [<a href="pubs.html">Complete list</a> 
+| <a href="pubs-bytopic.html">Organized by topic</a>
 ]
 
 <ul>
