adding footprint TR and fixed punctuation issues

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Seyed K. Fayaz, Tushar Sharma, Ari Fogel, Ratul Mahajan, Todd Millstein, Vyas Se
 <li>
 <a href=papers/hvc2016-ddnf.pdf>ddNF: An Efficient Data Structure for Header Spaces</a>
 <br>
-Nikolaj Bjørner, Garvit Juniwal, Ratul Mahajan, Sanjit A. Seshia, and
+Nikolaj Bjorner, Garvit Juniwal, Ratul Mahajan, Sanjit A. Seshia, and
 George Varghese
 <br>
 <i>Haifa Verification Conference (HVC), 2016</i>
@@ -79,7 +79,7 @@ George Varghese
 <b>Best Paper Award</b>
 
 <li>
-<a href=papers/sigcomm2016-propane.pdf>Don’t Mind the Gap: Bridging Network-wide Objectives and Device-level Configurations</a>
+<a href=papers/sigcomm2016-propane.pdf>Don't Mind the Gap: Bridging Network-wide Objectives and Device-level Configurations</a>
 <br>
 Ryan Beckett, Ratul Mahajan, ,Jitu Padhye, Todd Millstein, David Walker
 <br>
@@ -124,7 +124,7 @@ Klaus-Tycho Forster, Ratul Mahajan, Roger Wattenhofer.
 <i>IFIP Networking, 2016</i> 
 
 <li>
-<a href=papers/ofc2016-bvt.pdf>Evaluation of Elastic Modulation Gains in Microsoft’s Optical Backbone in North America</a>
+<a href=papers/ofc2016-bvt.pdf>Evaluation of Elastic Modulation Gains in Microsoft's Optical Backbone in North America</a>
 <br>
 Monia Ghobadi, Jamie Gaudette, Ratul Mahajan, Amar Phanishayee, Buddy Klinkers, Daniel Kilper.
 <br>
