--- a/pubs-bytopic.html
+++ b/pubs-bytopic.html
@@ -88,12 +88,12 @@ Monia Ghobadi, Ratul Mahajan, Amar Phanishayee, Houman Rastegarfar, Pierre-Alexa
 SIGCOMM, 2016<br>
 <br>
 <tr><td><td>
-<a href=papers/jocn2016-elastic-optical-networks.pdf><b>Elastic Optical Networking in the {Microsoft} Cloud</b></a><br>
+<a href=papers/jocn2016-elastic-optical-networks.pdf><b>Elastic Optical Networking in the Microsoft Cloud</b></a><br>
 Mark Filer, Jamie Gaudette, Monia Ghobadi, Ratul Mahajan, Tom Issenhuth, Buddy Klinkers, Jeff Cox<br>
 Journal of Optical Communications and Networking (JOCN), 2016<br>
 <br>
 <tr><td><td>
-<a href=papers/ofc2016-bvt.pdf><b>Evaluation of Elastic Modulation Gains in {Microsoft’s} Optical Backbone in {North America}</b></a><br>
+<a href=papers/ofc2016-bvt.pdf><b>Evaluation of Elastic Modulation Gains in Microsoft’s Optical Backbone in North America</b></a><br>
 Monia Ghobadi, Jamie Gaudette, Ratul Mahajan, Amar Phanishayee, Buddy Klinkers, Daniel Kilper<br>
 OFC, 2016<br>
 <br>
@@ -113,7 +113,7 @@ IFIP Networking, 2016<br>
 <a href=papers/nsdi2016-footprint.pdf><b>Efficiently Delivering Online Service over Integrated Infrastructure</b></a><br>
 Hongqiang Harry Liu, Raajay Viswanathan, Matt Calder, Aditya Akella, Ratul Mahajan, Jitendra Padhye, Ming Zhang<br>
 NSDI, 2016<br>
-<br>
+<a href=papers/tr2016-footprint.pdf>Technical report</a><br><br>
 <tr><td><td>
 <a href=papers/sigcomm2014-ffc.pdf><b>Traffic Engineering with Forward Fault Correction</b></a><br>
 Hongqiang Harry Liu, Srikanth Kandula, Ratul Mahajan, Ming Zhang, David Gelernter<br>
@@ -397,7 +397,7 @@ Workshop on Experimental approaches to wireless network design and analysis (E-W
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
 <tr><td width=10px><td></tr>
 <tr><td><td>
-<a href=papers/imc2015-anycast.pdf><b>Analyzing the Performance of an Anycast {CDN}</b></a><br>
+<a href=papers/imc2015-anycast.pdf><b>Analyzing the Performance of an Anycast CDN</b></a><br>
 Matt Calder, Ethan Katz-Bassett, Ratul Mahajan, Jitu Padhye<br>
 IMC, 2015<br>
 <br>
@@ -519,7 +519,7 @@ WIRED workshop (invited position paper), 2003<br>
 <a href=papers/nsdi2016-footprint.pdf><b>Efficiently Delivering Online Service over Integrated Infrastructure</b></a><br>
 Hongqiang Harry Liu, Raajay Viswanathan, Matt Calder, Aditya Akella, Ratul Mahajan, Jitendra Padhye, Ming Zhang<br>
 NSDI, 2016<br>
-<br>
+<a href=papers/tr2016-footprint.pdf>Technical report</a><br><br>
 <tr><td><td>
 <a href=papers/nsdi2010-entact.pdf><b>Optimizing cost and performance in online service provider networks</b></a><br>
 Zheng Zhang, Ming Zhang, Albert Greenberg, Y. Charlie Hu, Ratul Mahajan, Blaine Christian<br>
