--- a/pubs.html
+++ b/pubs.html
@@ -45,7 +45,7 @@ Chenguang Shen, Rayman Preet Singh, Amar Phanishayee, Aman Kansal, Ratul Mahajan
 Usenix ATC, 2016<br>
 <br>
 <tr><td><td>
-<a href=papers/jocn2016-elastic-optical-networks.pdf><b>Elastic Optical Networking in the {Microsoft} Cloud</b></a><br>
+<a href=papers/jocn2016-elastic-optical-networks.pdf><b>Elastic Optical Networking in the Microsoft Cloud</b></a><br>
 Mark Filer, Jamie Gaudette, Monia Ghobadi, Ratul Mahajan, Tom Issenhuth, Buddy Klinkers, Jeff Cox<br>
 Journal of Optical Communications and Networking (JOCN), 2016<br>
 <br>
@@ -55,7 +55,7 @@ Klaus-Tycho Forster, Ratul Mahajan, Roger Wattenhofer<br>
 IFIP Networking, 2016<br>
 <br>
 <tr><td><td>
-<a href=papers/ofc2016-bvt.pdf><b>Evaluation of Elastic Modulation Gains in {Microsoft’s} Optical Backbone in {North America}</b></a><br>
+<a href=papers/ofc2016-bvt.pdf><b>Evaluation of Elastic Modulation Gains in Microsoft’s Optical Backbone in North America</b></a><br>
 Monia Ghobadi, Jamie Gaudette, Ratul Mahajan, Amar Phanishayee, Buddy Klinkers, Daniel Kilper<br>
 OFC, 2016<br>
 <br>
@@ -63,7 +63,7 @@ OFC, 2016<br>
 <a href=papers/nsdi2016-footprint.pdf><b>Efficiently Delivering Online Service over Integrated Infrastructure</b></a><br>
 Hongqiang Harry Liu, Raajay Viswanathan, Matt Calder, Aditya Akella, Ratul Mahajan, Jitendra Padhye, Ming Zhang<br>
 NSDI, 2016<br>
-<br>
+<a href=papers/tr2016-footprint.pdf>Technical report</a><br><br>
 </table>
 <p><b>2015</b>
 
@@ -75,7 +75,7 @@ Aaron Gember-Jacobson, Wenfei Wu, Xiujun Liu, Aditya Akella, Ratul Mahajan<br>
 IMC, 2015<br>
 <br>
 <tr><td><td>
-<a href=papers/imc2015-anycast.pdf><b>Analyzing the Performance of an Anycast {CDN}</b></a><br>
+<a href=papers/imc2015-anycast.pdf><b>Analyzing the Performance of an Anycast CDN</b></a><br>
 Matt Calder, Ethan Katz-Bassett, Ratul Mahajan, Jitu Padhye<br>
 IMC, 2015<br>
 <br>
