minor updates to pubs

--- a/pubs-bytopic.html
+++ b/pubs-bytopic.html
@@ -5,23 +5,23 @@
 </head>
 <body bgcolor="#ffffff">
 <ul>
-<li><a href="#protocols">Network verification</a>
-<li><a href="#optical">Optical networking</a>
-<li><a href="#sdn">Software-defined networking</a>
-<li><a href="#home">Home networks</a>
-<li><a href="#vehicular">Vehicular networks</a>
-<li><a href="#mobile">Mobile systems</a>
-<li><a href="#diagnosis">Network monitoring and diagnosis</a>
-<li><a href="#wireless">Measuring and modeling wireless networks</a>
-<li><a href="#astronomy">Internet astronomy (Measuring the Internet)</a>
-<li><a href="#incentives">Incentives in networked systems</a>
-<li><a href="#resource">Network resource management</a>
-<li><a href="#overlays">Overlays and peer-to-peer</a>
-<li><a href="#misc">Miscellaneous</a>
+<li><a href="#protocols">Network verification</a>
+<li><a href="#optical">Optical networking</a>
+<li><a href="#sdn">Software-defined networking</a>
+<li><a href="#home">Home networks</a>
+<li><a href="#vehicular">Vehicular networks</a>
+<li><a href="#mobile">Mobile systems</a>
+<li><a href="#diagnosis">Network monitoring and diagnosis</a>
+<li><a href="#wireless">Measuring and modeling wireless networks</a>
+<li><a href="#astronomy">Internet astronomy (Measuring the Internet)</a>
+<li><a href="#incentives">Incentives in networked systems</a>
+<li><a href="#resource">Network resource management</a>
+<li><a href="#overlays">Overlays and peer-to-peer</a>
+<li><a href="#misc">Miscellaneous</a>
 </ul>
 <p><a name=protocols></a>
 
-               <b>Network verification</b>
+               <b>Network verification</b>
 
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
 <tr><td width=10px><td></tr>
@@ -73,7 +73,7 @@ HotNets, 2008<br>
 </table>
 <p><a name=optical></a>
 
-               <b>Optical networking</b>
+               <b>Optical networking</b>
 
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
 <tr><td width=10px><td></tr>
@@ -100,7 +100,7 @@ OFC, 2016<br>
 </table>
 <p><a name=sdn></a>
 
-               <b>Software-defined networking</b>
+               <b>Software-defined networking</b>
 
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
 <tr><td width=10px><td></tr>
@@ -117,17 +117,17 @@ NSDI, 2016<br>
 <tr><td><td>
 <a href=papers/sigcomm2014-ffc.pdf><b>Traffic Engineering with Forward Fault Correction</b></a><br>
 Hongqiang Harry Liu, Srikanth Kandula, Ratul Mahajan, Ming Zhang, David Gelernter<br>
-ACM SIGCOMM, 2014<br>
+SIGCOMM, 2014<br>
 <a href=papers/tr2014-ffc-appendix.pdf>Appendix</a><br><br>
 <tr><td><td>
 <a href=papers/sigcomm2014-dionysus.pdf><b>Dynamic Scheduling of Network Updates</b></a><br>
 Xin Jin, Hongqiang Harry Liu, Rohan Gandhi, Srikanth Kandula, Ratul Mahajan, Ming Zhang, Jennifer Rexford, Roger Wattenhofer<br>
-ACM SIGCOMM, 2014<br>
+SIGCOMM, 2014<br>
 <a href=papers/tr2014-dionysus.pdf>Extended version</a><br><br>
 <tr><td><td>
 <a href=papers/sigcomm2014-statesman.pdf><b>A Network-State Management Service</b></a><br>
 Peng Sun, Ratul Mahajan, Jennifer Rexford, Lihua Yuan, Ming Zhang, Ahsan Arefin<br>
-ACM SIGCOMM, 2014<br>
+SIGCOMM, 2014<br>
 <br>
 <tr><td><td>
 <a href=papers/hotnets2013-sdnupdates.pdf><b>On Consistent Updates in Software-Defined Networks</b></a><br>
@@ -142,7 +142,7 @@ SIGCOMM, 2013<br>
 </table>
 <p><a name=home></a>
 
-               <b>Home networks</b>
+               <b>Home networks</b>
 
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
 <tr><td width=10px><td></tr>
@@ -209,7 +209,7 @@ HotNets, 2010<br>
 </table>
 <p><a name=vehicular></a>
 
-               <b>Vehicular networks</b>
+               <b>Vehicular networks</b>
 
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
 <tr><td width=10px><td></tr>
@@ -236,7 +236,7 @@ Internet measurement confernece (IMC), 2007<br>
 </table>
 <p><a name=mobile></a>
 
-               <b>Mobile systems</b>
+               <b>Mobile systems</b>
 
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
 <tr><td width=10px><td></tr>
@@ -288,7 +288,7 @@ MobiSys, 2010<br>
 </table>
 <p><a name=diagnosis></a>
 
-               <b>Network monitoring and diagnosis</b>
+               <b>Network monitoring and diagnosis</b>
 
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
 <tr><td width=10px><td></tr>
@@ -345,7 +345,7 @@ SIGCOMM, 2009<br>
 </table>
 <p><a name=wireless></a>
 
-               <b>Measuring and modeling wireless networks</b>
+               <b>Measuring and modeling wireless networks</b>
 
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
 <tr><td width=10px><td></tr>
@@ -392,7 +392,7 @@ Workshop on Experimental approaches to wireless network design and analysis (E-W
 <tr><td><td></table>
 <p><a name=astronomy></a>
 
-               <b>Internet astronomy (Measuring the Internet)</b>
+               <b>Internet astronomy (Measuring the Internet)</b>
 
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
 <tr><td width=10px><td></tr>
@@ -464,7 +464,7 @@ SIGCOMM, 2002<br>
 </table>
 <p><a name=incentives></a>
 
-               <b>Incentives in networked systems</b>
+               <b>Incentives in networked systems</b>
 
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
 <tr><td width=10px><td></tr>
@@ -511,7 +511,7 @@ WIRED workshop (invited position paper), 2003<br>
 </table>
 <p><a name=resource></a>
 
-               <b>Network resource management</b>
+               <b>Network resource management</b>
 
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
 <tr><td width=10px><td></tr>
@@ -543,7 +543,7 @@ International Conference on Network Protocols (ICNP), 2001<br>
 <tr><td><td></table>
 <p><a name=overlays></a>
 
-               <b>Overlays and peer-to-peer</b>
+               <b>Overlays and peer-to-peer</b>
 
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
 <tr><td width=10px><td></tr>
@@ -565,7 +565,7 @@ UW-CSE Technical report, 2002<br>
 </table>
 <p><a name=misc></a>
 
-               <b>Miscellaneous</b>
+               <b>Miscellaneous</b>
 
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
 <tr><td width=10px><td></tr>
