--- a/pubs.html
+++ b/pubs.html
@@ -127,17 +127,17 @@ ACM Multimedia, 2014<br>
 <tr><td><td>
 <a href=papers/sigcomm2014-ffc.pdf><b>Traffic Engineering with Forward Fault Correction</b></a><br>
 Hongqiang Harry Liu, Srikanth Kandula, Ratul Mahajan, Ming Zhang, David Gelernter<br>
-ACM SIGCOMM, 2014<br>
+SIGCOMM, 2014<br>
 <a href=papers/tr2014-ffc-appendix.pdf>Appendix</a><br><br>
 <tr><td><td>
 <a href=papers/sigcomm2014-dionysus.pdf><b>Dynamic Scheduling of Network Updates</b></a><br>
 Xin Jin, Hongqiang Harry Liu, Rohan Gandhi, Srikanth Kandula, Ratul Mahajan, Ming Zhang, Jennifer Rexford, Roger Wattenhofer<br>
-ACM SIGCOMM, 2014<br>
+SIGCOMM, 2014<br>
 <a href=papers/tr2014-dionysus.pdf>Extended version</a><br><br>
 <tr><td><td>
 <a href=papers/sigcomm2014-statesman.pdf><b>A Network-State Management Service</b></a><br>
 Peng Sun, Ratul Mahajan, Jennifer Rexford, Lihua Yuan, Ming Zhang, Ahsan Arefin<br>
-ACM SIGCOMM, 2014<br>
+SIGCOMM, 2014<br>
 <br>
 <tr><td><td>
 <a href=papers/atc2014-gestalt.pdf><b>Gestalt: Fast, unified fault localization for networked systems</b></a><br>
