--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 </ul>
 
 <p><b>Recent papers</b> [<a href="pubs.html">Complete list</a> 
-| <a href="pubs-bytopic.html">Organized by topic</a>
+  | <a href="pubs-bytopic.html">Organized by topic</a>
+  | <a https://scholar.google.com/citations?user=Sh1yq5QAAAAJ> Google Scholar </a>
 ]
 
 <ul>
