--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <p><b>Recent papers</b> [<a href="pubs.html">Complete list</a> 
   | <a href="pubs-bytopic.html">Organized by topic</a>
-  | <a https://scholar.google.com/citations?user=Sh1yq5QAAAAJ> Google Scholar </a>
+  | <a href="https://scholar.google.com/citations?user=Sh1yq5QAAAAJ">Google Scholar</a>
 ]
 
 <ul>
