--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
 <ul>
 
 <li>
+<a href=papers/nsdi2017-rail.pdf>RAIL: A case for redundant arrays of inexpensive links in data center networks</a>
+<br>
+Danyang Zhuo, Monia Ghobadi, Ratul Mahajan, Amar Phanishayee, Xuan Kelvin Zou, Hang Guan, Arvind Krishnamurthy, Thomas Anderson
+<br>
+<i>NSDI, 2017</i>
+
+
+<li>
 <a href=papers/imc2016-opticalfailures.pdf>Optical Layer Failures in a Large Backbone</a>
 <br>
 Monia Ghobadi, Ratul Mahajan
