--- a/index.html
+++ b/index.html
@@ -208,6 +208,10 @@ Keynote at HUPS, July 2013
 <li>
 <b>PC member:</b>
 <ul>
+<li> 2017:
+<a href="https://www.usenix.org/conference/nsdi17">NSDI</a>,
+<a href="http://conferences.sigcomm.org/sigcomm/2017/">SIGCOMM</a>,
+
 <li> 2016:
 <a href="https://www.usenix.org/conference/nsdi16">NSDI</a>,
 <a href="http://conferences.sigcomm.org/sigcomm/2016/">SIGCOMM</a>,
