--- a/index.html
+++ b/index.html
@@ -317,9 +317,15 @@ Keynote at HUPS, July 2013
 </ul>
 
 <p>
-<b>Short bio</b>
+<b>Bio</b>
 <br>
-Ratul Mahajan is a Principal Researcher at Microsoft Research and an Affiliate Professor at the University of Washington. His research interests include all aspects of networked systems. His current work focuses on network verification and optical networks. His past work spans connected homes, software-defined networking, Internet routing and measurements, and vehicular networks. He has published over 50 papers in top-tier venues such as SIGCOMM, SOSP, MobiCom, and CHI and several technologies that he has developed power Microsofts cloud infrastructure. He has been recognized as ACM Distinguished Scientist and ACM SIGCOMM Rising Star and has won the William R. Bennett prize, the SIGCOMM best paper award, and Microsoft Research Graduate Fellowship.
+<b>Bio</b>
+<br>
+Ratul Mahajan is a Co-founder and CEO of <a href=http://www.intentionet.com>Intentionet</a>, a company that is enabling safe, rapid evolution of computer networks using formal analysis and high-level design approaches. Prior to that, he was a Principal Researcher at <a href=https://www.microsoft.com/en-us/research/>Microsoft Research</a>. He got his PhD at the <a href=https://www.cs.washington.edu/>University of Washington</a> and B.Tech at <a href=http://www.iitd.ac.in/>Indian Institute of Technology, Delhi</a>, both in Computer Science and Engineering.
+<br>
+Ratul is a computer systems researcher with a networking focus and has worked on a broad set of topics, including network verification, connected homes, network programming, optical networks, Internet routing and measurements, and mobile systems. He has published over fifty papers in top venues such as SIGCOMM, SOSP, MobiCom, CHI, and PLDI, and many of the technologies that he has helped develop are part of real-world systems at Microsoft and other companies. 
+<br>
+Ratul has been recognized as an ACM Distinguished Scientist, an ACM SIGCOMM Rising Star, and a Microsoft Research Graduate Fellow. His papers have won the ACM SIGCOMM Test-of-Time Award, the IEEE William R. Bennett Prize, the ACM SIGCOMM Best Paper Awards (twice), and the HVC Best Paper Award. 
 </div>
 
 </body>
