--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ Keynote at HUPS, July 2013
 <ul>
 <li> 2017:
 <a href="https://www.usenix.org/conference/nsdi17">NSDI</a>,
-<a href="http://conferences.sigcomm.org/sigcomm/2017/">SIGCOMM</a>,
+<a href="http://conferences.sigcomm.org/sigcomm/2017/">SIGCOMM</a>
 
 <li> 2016:
 <a href="https://www.usenix.org/conference/nsdi16">NSDI</a>,
@@ -322,9 +322,9 @@ Keynote at HUPS, July 2013
 <b>Bio</b>
 <br>
 Ratul Mahajan is a Co-founder and CEO of <a href=http://www.intentionet.com>Intentionet</a>, a company that is enabling safe, rapid evolution of computer networks using formal analysis and high-level design approaches. Prior to that, he was a Principal Researcher at <a href=https://www.microsoft.com/en-us/research/>Microsoft Research</a>. He got his PhD at the <a href=https://www.cs.washington.edu/>University of Washington</a> and B.Tech at <a href=http://www.iitd.ac.in/>Indian Institute of Technology, Delhi</a>, both in Computer Science and Engineering.
-<br>
+<p>
 Ratul is a computer systems researcher with a networking focus and has worked on a broad set of topics, including network verification, connected homes, network programming, optical networks, Internet routing and measurements, and mobile systems. He has published over fifty papers in top venues such as SIGCOMM, SOSP, MobiCom, CHI, and PLDI, and many of the technologies that he has helped develop are part of real-world systems at Microsoft and other companies. 
-<br>
+<p>
 Ratul has been recognized as an ACM Distinguished Scientist, an ACM SIGCOMM Rising Star, and a Microsoft Research Graduate Fellow. His papers have won the ACM SIGCOMM Test-of-Time Award, the IEEE William R. Bennett Prize, the ACM SIGCOMM Best Paper Awards (twice), and the HVC Best Paper Award. 
 </div>
 
