--- a/index.html
+++ b/index.html
@@ -125,32 +125,16 @@ Mark Filer, Jamie Gaudette, Monia Ghobadi, Ratul Mahajan, Tom Issenhuth, Buddy K
 <br>
 <i>Journal of Optical Communications and Networking (JOCN), 2016</i> 
 
-<li>
-<a href=papers/networking2016-consistentupdates.pdf>Consistent Updates in Software Defined Networks: On Dependencies, Loop Freedom, and Blackholes</a>
-<br>
-Klaus-Tycho Forster, Ratul Mahajan, Roger Wattenhofer.
-<br>
-<i>IFIP Networking, 2016</i> 
-
-<li>
-<a href=papers/ofc2016-bvt.pdf>Evaluation of Elastic Modulation Gains in Microsoft's Optical Backbone in North America</a>
-<br>
-Monia Ghobadi, Jamie Gaudette, Ratul Mahajan, Amar Phanishayee, Buddy Klinkers, Daniel Kilper.
-<br>
-<i>OFC, 2016</i> 
-
-<li>
-<a href=papers/nsdi2016-footprint.pdf>Efficiently Delivering Online Service over Integrated Infrastructure</a>
-<br>
-Hongqiang Harry Liu, Raajay Viswanathan, Matt Calder, Aditya Akella, Ratul Mahajan, Jitendra Padhye, Ming Zhang.
-<br>
-<i>NSDI, 2016</i> 
-
 </ul>
 
 <p>
 <b>Select talks</b> [<a href="talks.html">More talks</a>]
 <ul>
+
+<li>
+<a href=talks/sosr-apr2017.pptx>Network programming for the cloud ERA</a> 
+<br>
+Keynote at <a href=http://conferences.sigcomm.org/sosr/2017/>ACM SOSR 2017</a> <br>
 
 <li>
 <a href=talks/network-programming-jun2016.pptx>Maslow's hierarchy of network programming and the unmet needs</a> 
