adding twitter handle

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   <td width=214 style='width:160.5pt;padding:0in 0in 0in 0in'>
   <p >Ratul Mahajan<br>
   &lt;ratul [at] ratul [dot] org&gt;<br>
+  <a href=https://twitter.com/ratulm>@ratulm</a><br>
   </p>
   </td>
  </tr>
