added propane/at paper

--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
 <ul>
 
 <li>
+<a href=papers/pldi2017-propaneat.pdf>Network Configuration Synthesis With Abstract Topologies</a>
+<br>
+Ryan Beckett, Ratul Mahajan, Jitu Padhye, Todd Millstein, David Walker
+<br>
+<i>PLDI, 2017</i>
+
+<li>
 <a href=papers/nsdi2017-rail.pdf>RAIL: A case for redundant arrays of inexpensive links in data center networks</a>
 <br>
 Danyang Zhuo, Monia Ghobadi, Ratul Mahajan, Amar Phanishayee, Xuan Kelvin Zou, Hang Guan, Arvind Krishnamurthy, Thomas Anderson
@@ -91,7 +98,7 @@ George Varghese
 <li>
 <a href=papers/sigcomm2016-propane.pdf>Don't Mind the Gap: Bridging Network-wide Objectives and Device-level Configurations</a>
 <br>
-Ryan Beckett, Ratul Mahajan, ,Jitu Padhye, Todd Millstein, David Walker
+Ryan Beckett, Ratul Mahajan, Jitu Padhye, Todd Millstein, David Walker
 <br>
 <i>SIGCOMM, 2016</i>
 <br>
@@ -111,20 +118,6 @@ Daniel Kilper, Janardhan Kulkarni, Gireeja Ranade, Nikhil Devanur
 Aaron Gember-Jacobson, Raajay Viswanathan, Aditya Akella and Ratul Mahajan
 <br> 
 <i>SIGCOMM, 2016</i>
-
-<li>
-<a href=papers/atc2016-beam.pdf>Beam: Ending Monolithic Applications for Connected Devices</a>
-<br>
-Chenguang Shen, Rayman Preet Singh, Amar Phanishayee, Aman Kansal, Ratul Mahajan
-<br>
-<i>Usenix ATC, 2016</i> 
-
-<li>
-<a href=papers/jocn2016-elastic-optical-networks.pdf>Elastic Optical Networking in the Microsoft Cloud</a>
-<br>
-Mark Filer, Jamie Gaudette, Monia Ghobadi, Ratul Mahajan, Tom Issenhuth, Buddy Klinkers, Jeff Cox
-<br>
-<i>Journal of Optical Communications and Networking (JOCN), 2016</i> 
 
 </ul>
 
