--- a/pubs-bytopic.html
+++ b/pubs-bytopic.html
@@ -23,6 +23,11 @@
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
 <tr><td width=10px><td></tr>
 <tr><td><td>
+<a href=papers/pldi2017-propaneat.pdf><b>Network Configuration Synthesis with Abstract Topologies</b></a><br>
+Ryan Beckett, Ratul Mahajan, Jitu Padhye, Todd Millstein, David Walker<br>
+ACM PLDI, 2017<br>
+<br>
+<tr><td><td>
 <a href=papers/osdi2016-era.pdf><b>Efficient network reachability analysis using a succinct control plane representation</b></a><br>
 Seyed K. Fayaz, Tushar Sharma, Ari Fogel, Ratul Mahajan, Todd Millstein, Vyas Sekar, George Varghese<br>
 USENIX OSDI, 2016<br>
