--- a/pubs.html
+++ b/pubs.html
@@ -10,6 +10,11 @@
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
 <tr><td width=10px><td></tr>
 <tr><td><td>
+<a href=papers/pldi2017-propaneat.pdf><b>Network Configuration Synthesis with Abstract Topologies</b></a><br>
+Ryan Beckett, Ratul Mahajan, Jitu Padhye, Todd Millstein, David Walker<br>
+ACM PLDI, 2017<br>
+<br>
+<tr><td><td>
 <a href=papers/nsdi2017-rail.pdf><b>RAIL: A case for redundant arrays of inexpensive links in data center networks</b></a><br>
 Danyang Zhuo, Monia Ghobadi, Ratul Mahajan, Amar Phanishayee, Xuan Kelvin Zou, Hang Guan, Arvind Krishnamurthy, Thomas Anderson<br>
 USENIX NSDI, 2017<br>
