added sigcomm 2017 papers

--- a/index.html
+++ b/index.html
@@ -55,6 +55,20 @@
 <ul>
 
 <li>
+<a href=papers/sigcomm2017-minesweeper.pdf>A General Approach to Network Configuration Verification</a>
+<br>
+Ryan Beckett, Aarti Gupta, Ratul Mahajan, David Walker
+<br>
+<i>SIGCOMM, 2017</i>
+
+<li>
+<a href=papers/sigcomm2017-corropt.pdf>Understanding and Mitigating Packet Corruption in Data Center Networks</a>
+<br>
+Danyang Zhuo, Monia Ghobadi, Ratul Mahajan, Klaus-Tycho Förster, Arvind Krishnamurthy, Thomas Anderson
+<br>
+<i>SIGCOMM, 2017</i>
+
+<li>
 <a href=papers/pldi2017-propaneat.pdf>Network Configuration Synthesis With Abstract Topologies</a>
 <br>
 Ryan Beckett, Ratul Mahajan, Jitu Padhye, Todd Millstein, David Walker
