--- a/pubs.html
+++ b/pubs.html
@@ -10,6 +10,16 @@
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
 <tr><td width=10px><td></tr>
 <tr><td><td>
+<a href=papers/sigcomm2017-minesweeper.pdf><b>A General Approach to Network Configuration Verification</b></a><br>
+Ryan Beckett, Aarti Gupta, Ratul Mahajan, David Walker<br>
+ACM SIGCOMM, 2017<br>
+<br>
+<tr><td><td>
+<a href=papers/sigcomm2017-corropt.pdf><b>Understanding and mitigating packet corruption in data center networks</b></a><br>
+Danyang Zhuo, Monia Ghobadi, Ratul Mahajan, Klaus-Tycho Förster, Arvind Krishnamurthy, Thomas Anderson<br>
+ACM SIGCOMM, 2017<br>
+<br>
+<tr><td><td>
 <a href=papers/pldi2017-propaneat.pdf><b>Network Configuration Synthesis with Abstract Topologies</b></a><br>
 Ryan Beckett, Ratul Mahajan, Jitu Padhye, Todd Millstein, David Walker<br>
 ACM PLDI, 2017<br>
