--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
 <ul>
 
 <li>
+<a href=papers/sosp2017-cpr.pdf>Automatically Repairing Network Control Planes Using an Abstract Representation</a>
+<br>
+Aaron Gember-Jacobson, Aditya Akella, Ratul Mahajan, Hongqiang Harry Liu
+<br>
+<i>SOSP, 2017</i>
+
+<li>
 <a href=papers/sigcomm2017-minesweeper.pdf>A General Approach to Network Configuration Verification</a>
 <br>
 Ryan Beckett, Aarti Gupta, Ratul Mahajan, David Walker
@@ -109,35 +116,16 @@ George Varghese
 <br>
 <b>Best Paper Award</b>
 
-<li>
-<a href=papers/sigcomm2016-propane.pdf>Don't Mind the Gap: Bridging Network-wide Objectives and Device-level Configurations</a>
-<br>
-Ryan Beckett, Ratul Mahajan, Jitu Padhye, Todd Millstein, David Walker
-<br>
-<i>SIGCOMM, 2016</i>
-<br>
-<b>Best Paper Award</b>
-
-<li>
-<a href="papers/sigcomm2016-projector.pdf">ProjecToR: Agile Reconfigurable Datacenter Interconnect</a>
-<br>
-Monia Ghobadi, Ratul Mahajan, Amar Phanishayee, Houman Rastegarfar, Pierre-Alexandre Blanche, Madeleine Glick, 
-Daniel Kilper, Janardhan Kulkarni, Gireeja Ranade, Nikhil Devanur
-<br> 
-<i>SIGCOMM, 2016</i>
-
-<li>
-<a href="papers/sigcomm2016-arc.pdf">Fast Control Plane Analysis Using an Abstract Representation</a>
-<br>
-Aaron Gember-Jacobson, Raajay Viswanathan, Aditya Akella and Ratul Mahajan
-<br> 
-<i>SIGCOMM, 2016</i>
-
 </ul>
 
 <p>
 <b>Select talks</b> [<a href="talks.html">More talks</a>]
 <ul>
+
+<li>
+<a href=talks/future-net-aug2017.pptx>Network Engineers Can Uncross their Fingers by Emulating Hardware and Software Engineers</a> [<a href=https://www.youtube.com/watch?v=LfoCK7Au6to>Watch</a>]
+<br>
+Keynote at <a href=https://www.vmware.com/futurenet>Future:Net</a>2017<br>
 
 <li>
 <a href=talks/sosr-apr2017.pptx>Network programming for the cloud ERA</a> 
