--- a/pubs.html
+++ b/pubs.html
@@ -10,6 +10,11 @@
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
 <tr><td width=10px><td></tr>
 <tr><td><td>
+<a href=papers/sosp2017-cpr.pdf><b>Automatically Repairing Network Control Planes Using an Abstract Representation</b></a><br>
+Aaron Gember-Jacobson, Aditya Akella, Ratul Mahajan, Hongqiang Harry Liu<br>
+ACM SOSP, 2017<br>
+<br>
+<tr><td><td>
 <a href=papers/sigcomm2017-minesweeper.pdf><b>A General Approach to Network Configuration Verification</b></a><br>
 Ryan Beckett, Aarti Gupta, Ratul Mahajan, David Walker<br>
 ACM SIGCOMM, 2017<br>
