added Odin and blog pointer

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <td width=214 style='width:160.5pt;padding:0in 0in 0in 0in'>
   <p >Ratul Mahajan<br>
   &lt;ratul [at] ratul [dot] org&gt;<br>
-  <a href=https://twitter.com/ratulm>@ratulm</a><br>
+  <a href=https://twitter.com/ratulm>@ratulm</a> | <a href=https://medium.com/@ratul_60608>blog</a><br>
   </p>
   </td>
  </tr>
@@ -53,6 +53,11 @@
 ]
 
 <ul>
+
+<li>
+<a href=papers/nsdi2018-odin.pdf>Odin: Microsoft’s Scalable Fault-Tolerant CDN Measurement System</a>
+<br> Matt Calder, Manuel Schroder, Ryan Gao, Ryan Stewart,Jitendra Padhye, Ratul Mahajan, Ganesh Ananthanarayanan, Ethan Katz-Bassett<br>
+<i>NSDI, 2018</i>
 
 <li>
 <a href=papers/sosp2017-cpr.pdf>Automatically Repairing Network Control Planes Using an Abstract Representation</a>
@@ -88,33 +93,6 @@ Ryan Beckett, Ratul Mahajan, Jitu Padhye, Todd Millstein, David Walker
 Danyang Zhuo, Monia Ghobadi, Ratul Mahajan, Amar Phanishayee, Xuan Kelvin Zou, Hang Guan, Arvind Krishnamurthy, Thomas Anderson
 <br>
 <i>NSDI, 2017</i>
-
-
-<li>
-<a href=papers/imc2016-opticalfailures.pdf>Optical Layer Failures in a Large Backbone</a>
-<br>
-Monia Ghobadi, Ratul Mahajan
-<br>
-<i>IMC, 2016</i>
-<br>
-<b>Best Dataset Award</b>
-
-<li>
-<a href=papers/osdi2016-era.pdf>Efficient Network Reachability Analysis using a Succinct Control Plane Representation</a>
-<br>
-Seyed K. Fayaz, Tushar Sharma, Ari Fogel, Ratul Mahajan, Todd Millstein, Vyas Sekar, George Varghese
-<br>
-<i>OSDI, 2016</i>
-
-<li>
-<a href=papers/hvc2016-ddnf.pdf>ddNF: An Efficient Data Structure for Header Spaces</a>
-<br>
-Nikolaj Bjorner, Garvit Juniwal, Ratul Mahajan, Sanjit A. Seshia, and
-George Varghese
-<br>
-<i>Haifa Verification Conference (HVC), 2016</i>
-<br>
-<b>Best Paper Award</b>
 
 </ul>
 
