--- a/pubs-bytopic.html
+++ b/pubs-bytopic.html
@@ -397,6 +397,11 @@ Workshop on Experimental approaches to wireless network design and analysis (E-W
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
 <tr><td width=10px><td></tr>
 <tr><td><td>
+<a href=papers/nsdi2018-odin.pdf><b>Odin: Microsoft’s Scalable Fault-Tolerant CDN Measurement System</b></a><br>
+Matt Calder, Manuel Schroder, Ryan Gao, Ryan Stewart, Jitendra Padhye, Ratul Mahajan, Ganesh Ananthanarayanan, Ethan Katz-Bassett<br>
+USENIX NSDI, 2018<br>
+<br>
+<tr><td><td>
 <a href=papers/imc2015-anycast.pdf><b>Analyzing the performance of an anycast CDN</b></a><br>
 Matt Calder, Ethan Katz-Bassett, Ratul Mahajan, Jitu Padhye<br>
 ACM IMC, 2015<br>
