--- a/pubs.html
+++ b/pubs.html
@@ -5,6 +5,16 @@
 </head>
 <body bgcolor="#ffffff">
 </table>
+<p><b>2018</b>
+
+<table style="width: 100%;" cellpadding="2" cellspacing="2">
+<tr><td width=10px><td></tr>
+<tr><td><td>
+<a href=papers/nsdi2018-odin.pdf><b>Odin: Microsoft’s Scalable Fault-Tolerant CDN Measurement System</b></a><br>
+Matt Calder, Manuel Schroder, Ryan Gao, Ryan Stewart, Jitendra Padhye, Ratul Mahajan, Ganesh Ananthanarayanan, Ethan Katz-Bassett<br>
+USENIX NSDI, 2018<br>
+<br>
+</table>
 <p><b>2017</b>
 
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
