--- a/pubs-bytopic.html
+++ b/pubs-bytopic.html
@@ -23,6 +23,11 @@
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
 <tr><td width=10px><td></tr>
 <tr><td><td>
+<a href=papers/sigcomm2018-bonsai.pdf><b>Control Plane Compression</b></a><br>
+Ryan Beckett, Aarti Gupta, Ratul Mahajan, David Walker<br>
+ACM SIGCOMM, 2018<br>
+<br>
+<tr><td><td>
 <a href=papers/sosp2017-cpr.pdf><b>Automatically Repairing Network Control Planes Using an Abstract Representation</b></a><br>
 Aaron Gember-Jacobson, Aditya Akella, Ratul Mahajan, Hongqiang Harry Liu<br>
 ACM SOSP, 2017<br>
