--- a/pubs.html
+++ b/pubs.html
@@ -10,6 +10,11 @@
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
 <tr><td width=10px><td></tr>
 <tr><td><td>
+<a href=papers/sigcomm2018-bonsai.pdf><b>Control Plane Compression</b></a><br>
+Ryan Beckett, Aarti Gupta, Ratul Mahajan, David Walker<br>
+ACM SIGCOMM, 2018<br>
+<br>
+<tr><td><td>
 <a href=papers/nsdi2018-odin.pdf><b>Odin: Microsoft’s Scalable Fault-Tolerant CDN Measurement System</b></a><br>
 Matt Calder, Manuel Schroder, Ryan Gao, Ryan Stewart, Jitendra Padhye, Ratul Mahajan, Ganesh Ananthanarayanan, Ethan Katz-Bassett<br>
 USENIX NSDI, 2018<br>
