--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
 <ul>
 
 <li>
+<a href=papers/sigcomm2018-bonsai.pdf>Control Plane Compression</a>
+<br> Ryan Beckett, Aarti Gupta, Ratul Mahajan, David Walker
+<br>
+<i>SIGCOMM, 2018</i>
+
+<li>
 <a href=papers/nsdi2018-odin.pdf>Odin: Microsoft’s Scalable Fault-Tolerant CDN Measurement System</a>
 <br> Matt Calder, Manuel Schroder, Ryan Gao, Ryan Stewart,Jitendra Padhye, Ratul Mahajan, Ganesh Ananthanarayanan, Ethan Katz-Bassett<br>
 <i>NSDI, 2018</i>
