--- a/pubs-bytopic.html
+++ b/pubs-bytopic.html
@@ -26,7 +26,7 @@
 <a href=papers/sigcomm2018-bonsai.pdf><b>Control Plane Compression</b></a><br>
 Ryan Beckett, Aarti Gupta, Ratul Mahajan, David Walker<br>
 ACM SIGCOMM, 2018<br>
-<br>
+<a href=https://arxiv.org/pdf/1806.08744.pdf>Extended version with proofs</a><br><br>
 <tr><td><td>
 <a href=papers/sosp2017-cpr.pdf><b>Automatically Repairing Network Control Planes Using an Abstract Representation</b></a><br>
 Aaron Gember-Jacobson, Aditya Akella, Ratul Mahajan, Hongqiang Harry Liu<br>
