--- a/pubs.html
+++ b/pubs.html
@@ -13,7 +13,7 @@
 <a href=papers/sigcomm2018-bonsai.pdf><b>Control Plane Compression</b></a><br>
 Ryan Beckett, Aarti Gupta, Ratul Mahajan, David Walker<br>
 ACM SIGCOMM, 2018<br>
-<br>
+<a href=https://arxiv.org/pdf/1806.08744.pdf>Extended version with proofs</a><br><br>
 <tr><td><td>
 <a href=papers/nsdi2018-odin.pdf><b>Odin: Microsoft’s Scalable Fault-Tolerant CDN Measurement System</b></a><br>
 Matt Calder, Manuel Schroder, Ryan Gao, Ryan Stewart, Jitendra Padhye, Ratul Mahajan, Ganesh Ananthanarayanan, Ethan Katz-Bassett<br>
