--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <h1><span style='font-size:36.0pt'>&nbsp;</span><o:p></o:p></h1>
 
 <table  border=0 cellspacing=0 cellpadding=0 width=531
- style='width:398.25pt;mso-cellspacing:0in;mso-padding-alt:0in 0in 0in 0in'
+ style='mso-cellspacing:0in;mso-padding-alt:0in 0in 0in 0in'
  nosave="" cols=2>
  <tr style='mso-yfti-irow:0;mso-yfti-firstrow:yes;mso-yfti-lastrow:yes'
   nosave="">
@@ -30,10 +30,12 @@
   <p ><img height=180 id="_x0000_i1025" src=ratul2.jpg
   border=0></p>
   </td>
-  <td width=214 style='width:160.5pt;padding:0in 0in 0in 0in'>
-  <p >Ratul Mahajan<br>
-  &lt;ratul [at] ratul [dot] org&gt;<br>
-  <a href=https://twitter.com/ratulm>@ratulm</a> | <a href=https://medium.com/@ratul_60608>blog</a><br>
+  <td width=320 style='padding:0in 0in 0in 0in'>
+  <p >Ratul Mahajan
+  <br>Associate Professor, <a href=https://www.cs.washington.edu/>UW</a>
+  <br>Co-founder and CEO, <a href=https://www.intentionet.com>Intentionet</a>
+  <br>&lt;ratul [at] ratul [dot] org&gt;
+  <br><a href=https://twitter.com/ratulm>@ratulm</a> | <a href=https://medium.com/@ratul_60608>blog</a>
   </p>
   </td>
  </tr>
@@ -283,7 +285,7 @@ Keynote at HUPS, July 2013
 <p>
 <b>Bio</b>
 <br>
-Ratul Mahajan is a Co-founder and CEO of <a href=http://www.intentionet.com>Intentionet</a>, a company that is enabling safe, rapid evolution of computer networks using formal analysis and high-level design approaches. Prior to that, he was a Principal Researcher at <a href=https://www.microsoft.com/en-us/research/>Microsoft Research</a>. He got his PhD at the <a href=https://www.cs.washington.edu/>University of Washington</a> and B.Tech at <a href=http://www.iitd.ac.in/>Indian Institute of Technology, Delhi</a>, both in Computer Science and Engineering.
+Ratul Mahajan is an Associate Professor at the <a href=https://www.cs.washington.edu/>University of Washington</a> (Paul G. Allen School of Computer Science) and a Co-founder and CEO of <a href=http://www.intentionet.com>Intentionet</a>, a company that is enabling safe, rapid evolution of computer networks using formal analysis and high-level design approaches. Prior to that, he was a Principal Researcher at <a href=https://www.microsoft.com/en-us/research/>Microsoft Research</a>. He got his PhD at the <a href=https://www.cs.washington.edu/>University of Washington</a> and B.Tech at <a href=http://www.iitd.ac.in/>Indian Institute of Technology, Delhi</a>, both in Computer Science and Engineering.
 <p>
 Ratul is a computer systems researcher with a networking focus and has worked on a broad set of topics, including network verification, connected homes, network programming, optical networks, Internet routing and measurements, and mobile systems. He has published over fifty papers in top venues such as SIGCOMM, SOSP, MobiCom, CHI, and PLDI, and many of the technologies that he has helped develop are part of real-world systems at Microsoft and other companies. 
 <p>
