--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
 <ul>
 
 <li>
+  <a href=papers/cav2019-origami.pdf>Efficient verification of network fault tolerance via counterexample-guided refinement</a>
+  <br> Nick Giannarakis, Ryan Beckett, Ratul Mahajan, David Walker
+  <br>
+  <i>CAV, 2019</i>
+    
+<li>
 <a href=papers/sigcomm2018-bonsai.pdf>Control Plane Compression</a>
 <br> Ryan Beckett, Aarti Gupta, Ratul Mahajan, David Walker
 <br>
@@ -66,41 +72,6 @@
 <a href=papers/nsdi2018-odin.pdf>Odin: Microsoft’s Scalable Fault-Tolerant CDN Measurement System</a>
 <br> Matt Calder, Manuel Schroder, Ryan Gao, Ryan Stewart,Jitendra Padhye, Ratul Mahajan, Ganesh Ananthanarayanan, Ethan Katz-Bassett<br>
 <i>NSDI, 2018</i>
-
-<li>
-<a href=papers/sosp2017-cpr.pdf>Automatically Repairing Network Control Planes Using an Abstract Representation</a>
-<br>
-Aaron Gember-Jacobson, Aditya Akella, Ratul Mahajan, Hongqiang Harry Liu
-<br>
-<i>SOSP, 2017</i>
-
-<li>
-<a href=papers/sigcomm2017-minesweeper.pdf>A General Approach to Network Configuration Verification</a>
-<br>
-Ryan Beckett, Aarti Gupta, Ratul Mahajan, David Walker
-<br>
-<i>SIGCOMM, 2017</i>
-
-<li>
-<a href=papers/sigcomm2017-corropt.pdf>Understanding and Mitigating Packet Corruption in Data Center Networks</a>
-<br>
-Danyang Zhuo, Monia Ghobadi, Ratul Mahajan, Klaus-Tycho Förster, Arvind Krishnamurthy, Thomas Anderson
-<br>
-<i>SIGCOMM, 2017</i>
-
-<li>
-<a href=papers/pldi2017-propaneat.pdf>Network Configuration Synthesis With Abstract Topologies</a>
-<br>
-Ryan Beckett, Ratul Mahajan, Jitu Padhye, Todd Millstein, David Walker
-<br>
-<i>PLDI, 2017</i>
-
-<li>
-<a href=papers/nsdi2017-rail.pdf>RAIL: A case for redundant arrays of inexpensive links in data center networks</a>
-<br>
-Danyang Zhuo, Monia Ghobadi, Ratul Mahajan, Amar Phanishayee, Xuan Kelvin Zou, Hang Guan, Arvind Krishnamurthy, Thomas Anderson
-<br>
-<i>NSDI, 2017</i>
 
 </ul>
 
