--- a/pubs-bytopic.html
+++ b/pubs-bytopic.html
@@ -23,6 +23,11 @@
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
 <tr><td width=10px><td></tr>
 <tr><td><td>
+<a href=papers/cav2019-origami.pdf><b>Efficient verification of network fault tolerance via counterexample-guided refinement</b></a><br>
+  <Nick Giannarakis, Ryan Beckett, Aarti Gupta, Ratul Mahajan, David Walker<br>
+CAV, 2019<br>
+<a href=papers/cav2019-full.pdf>Extended version with proofs</a><br><br>
+<tr><td><td>
 <a href=papers/sigcomm2018-bonsai.pdf><b>Control Plane Compression</b></a><br>
 Ryan Beckett, Aarti Gupta, Ratul Mahajan, David Walker<br>
 ACM SIGCOMM, 2018<br>
