fix typo in bibtex

--- a/pubs-bytopic.html
+++ b/pubs-bytopic.html
@@ -24,7 +24,7 @@
 <tr><td width=10px><td></tr>
 <tr><td><td>
 <a href=papers/cav2019-origami.pdf><b>Efficient verification of network fault tolerance via counterexample-guided refinement</b></a><br>
-  <Nick Giannarakis, Ryan Beckett, Aarti Gupta, Ratul Mahajan, David Walker<br>
+Nick Giannarakis, Ryan Beckett, Aarti Gupta, Ratul Mahajan, David Walker<br>
 CAV, 2019<br>
 <a href=papers/cav2019-full.pdf>Extended version with proofs</a><br><br>
 <tr><td><td>
