add hotnets2019 paper

--- a/index.html
+++ b/index.html
@@ -57,7 +57,13 @@
 <ul>
 
 <li>
-  <a href=papers/cav2019-origami.pdf>Efficient verification of network fault tolerance via counterexample-guided refinement</a>
+  <li>
+    <a href=papers/hotnets2019-putting.pdf>Putting network verification to good use</a>
+    <br>Ryan Beckett, Ratul Mahajan
+    <br>
+    <i>HotNets, 2019</i>
+
+<a href=papers/cav2019-origami.pdf>Efficient verification of network fault tolerance via counterexample-guided refinement</a>
   <br> Nick Giannarakis, Ryan Beckett, Ratul Mahajan, David Walker
   <br>
   <i>CAV, 2019</i>
