--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
 
 <ul>
 
+  <li>
+    <a href=papers/popl2020-shapeshifter.pdf>Abstract interpretation of distributed network control planes</a>
+    <br>Ryan Beckett, Aarti Gupta, Ratul Mahajan, David Walker
+    <br>
+    <i>POPL, 2020</i>
+
 <li>
 <a href=papers/hotnets2019-putting.pdf>Putting network verification to good use</a>
 <br>Ryan Beckett, Ratul Mahajan
