--- a/pubs-bytopic.html
+++ b/pubs-bytopic.html
@@ -23,6 +23,11 @@
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
 <tr><td width=10px><td></tr>
 <tr><td><td>
+<a href=papers/popl2020-shapeshifter.pdf><b>Efficient verification of network fault tolerance via counterexample-guided refinement</b></a><br>
+Ryan Beckett, Aarti Gupta, Ratul Mahajan, David Walker<br>
+POPL, 2020<br>
+<br>
+<tr><td><td>
 <a href=papers/hotnets2019-putting.pdf><b>Putting network verification to good use</b></a><br>
 Ryan Beckett, Ratul Mahajan<br>
 HotNets, 2019<br>
