--- a/pubs.html
+++ b/pubs.html
@@ -5,6 +5,16 @@
 </head>
 <body bgcolor="#ffffff">
 </table>
+<p><b>2020</b>
+
+<table style="width: 100%;" cellpadding="2" cellspacing="2">
+<tr><td width=10px><td></tr>
+<tr><td><td>
+<a href=papers/popl2020-shapeshifter.pdf><b>Efficient verification of network fault tolerance via counterexample-guided refinement</b></a><br>
+Ryan Beckett, Aarti Gupta, Ratul Mahajan, David Walker<br>
+POPL, 2020<br>
+<br>
+</table>
 <p><b>2019</b>
 
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
