--- a/index.html
+++ b/index.html
@@ -57,10 +57,16 @@
 <ul>
 
   <li>
-    <a href=papers/popl2020-shapeshifter.pdf>Abstract interpretation of distributed network control planes</a>
-    <br>Ryan Beckett, Aarti Gupta, Ratul Mahajan, David Walker
+    <a href=papers/hotnets2020-zen.pdf>A general framework for compositional network modeling</a>
+    <br>Ryan Beckett, Ratul Mahajan
     <br>
-    <i>POPL, 2020</i>
+    <i>HotNets, 2020</i>
+  
+    <li>
+      <a href=papers/popl2020-shapeshifter.pdf>Abstract interpretation of distributed network control planes</a>
+  <br>Ryan Beckett, Aarti Gupta, Ratul Mahajan, David Walker
+  <br>
+  <i>POPL, 2020</i>
 
 <li>
 <a href=papers/hotnets2019-putting.pdf>Putting network verification to good use</a>
@@ -74,17 +80,6 @@
 <br>
 <i>CAV, 2019</i>
     
-<li>
-<a href=papers/sigcomm2018-bonsai.pdf>Control Plane Compression</a>
-<br> Ryan Beckett, Aarti Gupta, Ratul Mahajan, David Walker
-<br>
-<i>SIGCOMM, 2018</i>
-
-<li>
-<a href=papers/nsdi2018-odin.pdf>Odin: Microsoft’s Scalable Fault-Tolerant CDN Measurement System</a>
-<br> Matt Calder, Manuel Schroder, Ryan Gao, Ryan Stewart,Jitendra Padhye, Ratul Mahajan, Ganesh Ananthanarayanan, Ethan Katz-Bassett<br>
-<i>NSDI, 2018</i>
-
 </ul>
 
 <p>
