--- a/pubs-bytopic.html
+++ b/pubs-bytopic.html
@@ -23,6 +23,11 @@
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
 <tr><td width=10px><td></tr>
 <tr><td><td>
+<a href=papers/sigcomm2021-yardstick.pdf><b>Test coverage metrics for the network</b></a><br>
+Xieyang Xu, Ryan Beckett, Karthick Jayaraman, Ratul Mahajan, David Walker<br>
+SIGCOMM, 2021<br>
+<br>
+<tr><td><td>
 <a href=papers/hotnets2020-zen.pdf><b>A general framework for compositional network modeling</b></a><br>
 Ryan Beckett, Ratul Mahajan<br>
 HotNets, 2020<br>
