--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
 <ul>
 
   <li>
+    <a href=papers/sigcomm2021-yardstick.pdf>Test coverage metrics for the network</a>
+    <br> Xieyang Xu, Ryan Beckett, Karthick Jayaraman, Ratul Mahajan, David Walker,
+    <br>
+    <i>SIGCOMM, 2021</i>  
+  </li>
+  <li>
     <a href=papers/hotnets2020-zen.pdf>A general framework for compositional network modeling</a>
     <br>Ryan Beckett, Ratul Mahajan
     <br>
@@ -66,20 +72,7 @@
       <a href=papers/popl2020-shapeshifter.pdf>Abstract interpretation of distributed network control planes</a>
   <br>Ryan Beckett, Aarti Gupta, Ratul Mahajan, David Walker
   <br>
-  <i>POPL, 2020</i>
-
-<li>
-<a href=papers/hotnets2019-putting.pdf>Putting network verification to good use</a>
-<br>Ryan Beckett, Ratul Mahajan
-<br>
-<i>HotNets, 2019</i>
-
-<li>
-<a href=papers/cav2019-origami.pdf>Efficient verification of network fault tolerance via counterexample-guided refinement</a>
-<br> Nick Giannarakis, Ryan Beckett, Ratul Mahajan, David Walker
-<br>
-<i>CAV, 2019</i>
-    
+  <i>POPL, 2020</i>    
 </ul>
 
 <p>
@@ -134,6 +127,7 @@ Keynote at HUPS, July 2013
 <ul>
 <li>
 <b>PC chair:</b> 
+<a href=https://conferences.sigcomm.org/sigcomm/2020/>SIGCOMM 2020</a>, 
 <a href=https://www.usenix.org/conference/nsdi14>NSDI 2014</a>, 
 <a href=http://conferences.sigcomm.org/imc/2012/>IMC 2012</a>, 
 <a href="http://mobiarch11.cs.ucl.ac.uk/">MobiArch 2011</a>, 
@@ -143,6 +137,11 @@ Keynote at HUPS, July 2013
 <li>
 <b>PC member:</b>
 <ul>
+  <li> 2021:
+    <a href=https://conferences.sigcomm.org/sigcomm/2021/>SIGCOMM</a>, 
+    <a href="http://conferences.sigcomm.org/hotnets/2021/">HotNets</a>, 
+  </li>
+
 <li> 2017:
 <a href="https://www.usenix.org/conference/nsdi17">NSDI</a>,
 <a href="http://conferences.sigcomm.org/sigcomm/2017/">SIGCOMM</a>
