--- a/pubs.html
+++ b/pubs.html
@@ -5,6 +5,16 @@
 </head>
 <body bgcolor="#ffffff">
 </table>
+<p><b>2021</b>
+
+<table style="width: 100%;" cellpadding="2" cellspacing="2">
+<tr><td width=10px><td></tr>
+<tr><td><td>
+<a href=papers/sigcomm2021-yardstick.pdf><b>Test coverage metrics for the network</b></a><br>
+Xieyang Xu, Ryan Beckett, Karthick Jayaraman, Ratul Mahajan, David Walker<br>
+SIGCOMM, 2021<br>
+<br>
+</table>
 <p><b>2020</b>
 
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
