--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ Keynote at HUPS, July 2013
 
 </ul>
 <li>
-<b>Steering committee</b> <a href="http://www.sigcomm.org/events/imc-conference">IMC</a> [2014-present]
+<b>Steering committee</b> <a href="http://www.sigcomm.org/events/imc-conference">IMC</a> [2014-2018]
 
 <li>
 <b>Workshops Chair:</b> <a href="http://www.acm.org/sigs/sigcomm/sigcomm2013/">SIGCOMM 2013</a>
